modus/src/components/Footer.css
.footer__wrapper {
    width: 100%;
    display: flex;
    flex-direction: column; 
    min-height: 120px; 
    height: auto; 
    position: fixed;
    bottom: 0; 
    left: 0;
    right: 0;
    background-color: var(--vscode-sideBar-background); /* Editor background color */
    z-index: 10; 
    justify-content: center;
    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
}

.footer__container {
    background-color: var(--vscode-editor-background); /* Editor background color */
    border: 1px solid var(--vscode-editorLineNumber-foreground); /* Line number foreground color */
    border-radius: 5px;
    padding: 10px;
    width: calc(100% - 20px);
    box-sizing: border-box;
    margin: 0 auto;
    transition: border-color 0.3s ease; 
    position: relative;
}

.footer__container.focused {
    border: 1px solid var(--vscode-focusBorder); /* Focus border color */
}

.progress-bar {
    position: absolute;
    top: 0;
    left: 0;
    width: 0; 
    height: 2px;
    background-color: var(--vscode-progressBar-background); 
    box-shadow: 0 0 10px var(--vscode-progressBar-background); 
    transition: width 0.6s ease;
}

.input-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    width: 100%;
}

.input-container textarea {
    flex-grow: 1;
    padding: 7px;
    border-radius: 4px;
    background-color: var(--vscode-editor-background); /* Editor background color */
    color: var(--vscode-editor-foreground); /* Editor foreground color */
    width: 100%;
    box-sizing: border-box;
    outline: none;
    border: none;
    resize: none;
    overflow: hidden;
    min-height: 20px;
    scrollbar-width: none; 
    -ms-overflow-style: none;
}

.toolbar {
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
}

.input-actions {
    display: flex;
}

.input-actions button {
    background: none;
    border: none;
    color: var(--vscode-editor-foreground); /* Editor foreground color */
    font-size: 18px;
    margin-left: 10px;
    cursor: pointer;
}

.input-actions button img {
    height: 20px;
}

.toolbar button {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
}

.toolbar button:hover {
    background-color: var(--vscode-toolbar-hoverBackground); /* Toolbar hover background color */
    border-radius: 3px; 
    transition: background-color 0.3s ease; 
}

.model_selection span {
    margin-right: 3px;
    font-weight: 200;
    font-size: 12px;
}


.model_selection {
    display: flex;
    align-items: center;
    margin-right: 10px;
}

.dropdown {
    display: flex;
    align-items: center;
    justify-content: end;
    margin-right: 5px;
}

.dropdown button {
    background: none;
    border: none;
    color: var(--vscode-editor-foreground); /* Editor foreground color */
    cursor: pointer;
}

.file__reference img {
    margin: 3px 5px 3px 7px;
    height: 12px;
    width: 12px;
    object-fit: contain;
    background: none;
    border-radius: 0;
}

.file__container {
    padding: 4px;
    width: 100%;
    transition: box-shadow 0.3s ease; 
    display: flex;
}

.file__container.shadow {
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Bottom shadow only */
}

.file__reference {
    display: flex;
    align-items: center;
    font-size: 11px;
    width: max-content;
    border: 1px solid var(--vscode-editorLineNumber-foreground); /* Line number foreground color */
    border-radius: 5px;
    margin-left: 5px;
}

.file__reference span {
    margin: 3px 5px;
}

.model_selection {
    position: relative;
}

.model_selection button {
    display: flex;
    align-items: center;
    background: none;
    border: none;
    cursor: pointer;
}

.dropdown-menu {
    position: absolute;
    top: -65px; 
    right: 0px;
    background-color: var(--vscode-sideBar-background); /* Dropdown background color */
    border-radius: 4px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
    z-index: 1000;
    width: 100px;
    border-radius: 5px;
    padding: 5px;
    border: 1px solid var(--vscode-dropdown-border); /* Dropdown border color */
}

.dropdown-menu div {
    font-size: 12px;
    padding: 10px;
    cursor: pointer;
    transition: background-color 0.2s;
    padding: 5px;
    border-radius: 5px;
}

.dropdown-menu div:hover {
    background-color: var(--vscode-focusBorder); /* Dropdown hover background color */
}

pre code.hljs {
    padding: 0.4rem 0.5rem 0.5rem 0.5rem !important;
}

.login-button {
    display: inline-block;
}

#authenticateButton {
    color: var(--vscode-button-foreground); 
    background-color: var(--vscode-button-background); 
    padding: 5px 10px;
    cursor: pointer;
    border-radius: 2px;
    font-size: 11px !important;
    transition: background-color 0.3s ease, color 0.3s ease;
}

#authenticateButton:hover {
    background-color: var(--vscode-button-hoverBackground); 
}

.disabled-icon {
    opacity: 0.5;
    pointer-events: none;
}

@media (max-width: 600px) {
    .footer__container {
        width: calc(100% - 20px); 
        padding: 5px;
    }

    .input-container {
        flex-direction: column;
        align-items: flex-start;
    }

    .input-container textarea {
        margin: 3px 0;
    }

    .input-actions, .dropdown {
        width: 100%;
    }
}

